# ttd-rs

./: .gitignore  CLAUDE.md  Cargo.toml  config.default.txt
fixtures/e2e/: README.md
fixtures/e2e/todo.txt.d/: 02-priority-creation.txt  03-project-context.txt  04-multi-projects-contexts.txt  05-due.txt  06-scheduled.txt  07-starting.txt  08-updated.txt  09-custom-tag.txt  10-project-at-start.txt  11-context-at-start.txt  12-multi-tags.txt  13-non-date-tags.txt  14-email-not-context.txt  15-math-not-project.txt  16-long-description.txt  17-overdue.txt  18-future-starting.txt  19-ttd-bug.txt  20-ttd-feature.txt  21-due-today.txt  22-scheduled-today.txt  23-due-soon.txt  24-no-priority.txt  25-lowercase-priority.txt  26-wrong-date-format.txt  27-duplicate-due.txt  28-malformed-due.txt  29-time-not-tag.txt  30-priority-z.txt
fixtures/e2e/todo.txt.d/done.txt.d/: done-01-minimal.txt  done-02-both-dates.txt  done-03-with-metadata.txt  done-04-with-updated.txt
fixtures/e2e/todo.txt.d/lists.d/: 1 Today.list  2 Inbox.list  3 Upcoming.list  4 Stale.list  5 Done.list  6 Year End.list  7 Work Inbox.list  (+4 more)
src/: cli.rs  config.rs  lib.rs  main.rs  parser.rs  store.rs
src/smartlist/: eval.rs  loader.rs  mod.rs  parser.rs  types.rs
src/tui/: app.rs  editor.rs  list_highlight.rs  mod.rs  mouse.rs  render.rs  session.rs  widgets.rs
tests/: cli_help.rs  cli_integration.rs  config_flow.rs  fixture_audit.rs  list_viewer.rs  parser_spec.rs  smartlist_eval.rs  smartlist_integration.rs  smartlist_load.rs  smartlist_parse.rs  tui_editor.rs  tui_mouse.rs  tui_render.rs  tui_session.rs
(+10 files in other folders)
